<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Activities Section -->
    <group
        android:id="@+id/activities_group"
        android:checkableBehavior="single"
        android:title="@string/menu_activities">

        <item
            android:id="@+id/nav_active"
            android:icon="@drawable/ic_active"
            android:textColor="@color/white"
            android:title="@string/active_activities" />

        <item
            android:id="@+id/nav_details"
            android:icon="@drawable/ic_data_details"
            android:textColor="@color/white"
            android:title="@string/activities_details" />

        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_analytics"
            android:textColor="@color/white"
            android:title="@string/activities_analysis_data" />

    </group>


    <!-- Other Section -->
    <group
        android:id="@+id/other_group"
        android:title="@string/menu_other">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:textColor="@color/white"
            android:title="@string/logout" />
    </group>
</menu>
