<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background_success"
    android:gravity="center"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_clear"
            android:contentDescription="@string/close"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/successTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/successMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_registration_was_successful"
        android:layout_marginBottom="8dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:lineSpacingExtra="2dp" />

</LinearLayout>