<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background_error"
    android:gravity="center"
    android:padding="@dimen/padding_large">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="@dimen/icon_size_standard"
            android:layout_height="@dimen/icon_size_standard"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_clear"
            app:tint="@color/white"
            android:contentDescription="@string/close"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard" />

    </RelativeLayout>

    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_heading"
        android:fontFamily="@font/bold"
        android:layout_marginBottom="@dimen/margin_tiny" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_was_an_issue_with_your_registration_nplease_try_again"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_subheading"
        android:fontFamily="@font/robotoregular"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_standard"
        android:lineSpacingExtra="@dimen/margin_micro" />

</LinearLayout>